--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFFFFF"
-    tools:context=".EditProfileActivity">
+    tools:context=".ViewProfileActivity">
 
     <TextView
         android:id="@+id/tv_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Update Profile Information"
+        android:text="View Profile Information"
         android:textStyle="bold"
-        android:textSize="16sp"
+        android:textSize="26sp"
         android:textColor="#000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,11 +47,11 @@
                 android:textColorHint="#808080"
                 app:layout_constraintTop_toTopOf="parent"
                 >
-
-
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_first_name"
+                app:helperText="First Name"
                 android:layout_width="0dp"
                 app:layout_constraintWidth_percent="0.7"
                 android:layout_height="wrap_content"
@@ -62,13 +62,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/layout_image"
                 >
 
-                <EditText
+                <TextView
                     android:id="@+id/et_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="First Name"
+                    android:text="Cameron"
                     android:gravity="center"
-                    android:padding="30dp"
+                    android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
                     android:background="#00000000"
@@ -80,22 +80,22 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_last_name"
                 android:layout_width="0dp"
+                app:helperText="Last Name"
                 app:layout_constraintWidth_percent="0.7"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="14dp"
                 android:textColorHint="#808080"
                 app:layout_constraintTop_toBottomOf="@+id/layout_first_name"
                 >
 
-                <EditText
+                <TextView
                     android:id="@+id/et_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Last Name"
                     android:gravity="center"
                     android:padding="10dp"
+                    android:text="Fassett"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
                     android:background="#00000000"
@@ -107,25 +107,25 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_email"
                 android:layout_width="0dp"
+                app:helperText="Email Address"
                 app:layout_constraintWidth_percent="0.7"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="14dp"
                 android:textColorHint="#808080"
                 app:layout_constraintTop_toBottomOf="@+id/layout_last_name"
                 >
 
-                <EditText
+                <TextView
                     android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
                     android:gravity="center"
                     android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
                     android:background="#00000000"
+                    android:text="camfass@gmail.com"
                     android:textSize="15sp"
                     android:inputType="textEmailAddress"
                     />
@@ -135,77 +135,30 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_contact_no"
                 android:layout_width="0dp"
+                app:helperText="Contact No"
                 app:layout_constraintWidth_percent="0.7"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="14dp"
                 android:textColorHint="#808080"
                 app:layout_constraintTop_toBottomOf="@+id/layout_email"
                 >
 
-                <EditText
+                <TextView
                     android:id="@+id/et_contact_no"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Contact No"
                     android:gravity="center"
                     android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
                     android:background="#00000000"
+                    android:text="03001234567"
                     android:textSize="15sp"
                     android:inputType="phone"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layout_des"
-                android:layout_width="0dp"
-                app:layout_constraintWidth_percent="0.7"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="14dp"
-                android:textColorHint="#808080"
-                app:layout_constraintTop_toBottomOf="@+id/layout_contact_no"
-                >
-
-                <EditText
-                    android:id="@+id/et_des"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Designation"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:textColor="#000000"
-                    android:textColorHint="#808080"
-                    android:background="#00000000"
-                    android:textSize="15sp"
-                    android:inputType="text"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <Button
-                android:id="@+id/bt_register"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                app:layout_constraintTop_toBottomOf="@+id/layout_des"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="Update Profile"
-                android:textColor="#FFFFFF"
-                android:textSize="15sp"
-                android:background="@color/design_default_color_primary"
-                android:textAllCaps="false"
-                android:layout_marginTop="30dp"
-                app:layout_constraintWidth_percent="0.7"
-                style="?android:attr/borderlessButtonStyle"
-                android:elevation="2dp"
-                android:onClick="performEditProfile"
-                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
