--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PreferencesActivity">
+    tools:context=".PreferenceActivity">
 
     <!--on below line we are creating
         a text for heading of our app-->
