--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -161,7 +161,7 @@
 
 
             <Button
-                android:id="@+id/bt_register"
+                android:id="@+id/btn_update"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 app:layout_constraintTop_toBottomOf="@+id/layout_contact_no"
