--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -157,7 +157,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/bt_register"
+                android:id="@+id/btn_edit"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 app:layout_constraintTop_toBottomOf="@+id/layout_user_no"
