--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,34 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context="com.tutorialkart.myapplication.LoginActivity">
     <LinearLayout
         android:id="@+id/ll_main_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:background="#FFFFFF"
+        android:background="#444444"
         android:padding="25dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
-            android:padding="30dp"
-            android:textAlignment="center"
-            android:text="Welcome to
-                          Arbor Parker"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textSize="25dp"
+            android:textColor="#6dffbf"
             android:padding="30dp"
             android:text="Login"/>
         <EditText
             android:id="@+id/et_user_name"
             android:hint="User Name"
             android:textColor="#6bfff7"
-            android:textColorHint="#808080"
+            android:textColorHint="#52afaa"
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -39,7 +32,7 @@
             android:id="@+id/et_password"
             android:hint="Password"
             android:textColor="#6bfff7"
-            android:textColorHint="#808080"
+            android:textColorHint="#52afaa"
             android:textAlignment="center"
             android:inputType="textPassword"
             android:layout_width="match_parent"
