--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -67,6 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Cameron"
+                    android:gravity="center"
                     android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
@@ -92,6 +93,7 @@
                     android:id="@+id/et_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:padding="10dp"
                     android:text="Fassett"
                     android:textColor="#000000"
@@ -118,6 +120,7 @@
                     android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
@@ -130,9 +133,9 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layout_user_no"
+                android:id="@+id/layout_contact_no"
                 android:layout_width="0dp"
-                app:helperText="User Number"
+                app:helperText="Contact No"
                 app:layout_constraintWidth_percent="0.7"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
@@ -145,6 +148,7 @@
                     android:id="@+id/et_contact_no"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
@@ -153,27 +157,8 @@
                     android:textSize="15sp"
                     android:inputType="phone"
                     />
-
             </com.google.android.material.textfield.TextInputLayout>
 
-            <Button
-                android:id="@+id/btn_edit"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                app:layout_constraintTop_toBottomOf="@+id/layout_user_no"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="Edit Profile"
-                android:textColor="#FFFFFF"
-                android:textSize="15sp"
-                android:background="@color/design_default_color_primary"
-                android:textAllCaps="false"
-                android:layout_marginTop="30dp"
-                app:layout_constraintWidth_percent="0.7"
-                style="?android:attr/borderlessButtonStyle"
-                android:elevation="2dp"
-                android:onClick="performEditProfile"
-                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
