--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -1,37 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".PreferenceActivity">
-
-    <!--on below line we are creating
-        a text for heading of our app-->
-    <TextView
-        android:id="@+id/idTVHeading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/idBtnSettings"
-        android:layout_margin="20dp"
-        android:gravity="center"
-        android:padding="4dp"
-        android:text="@string/app_name"
-        android:textAlignment="center"
-        android:textColor="@color/purple_200"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <!--button for opening settings activity-->
-    <Button
-        android:id="@+id/idBtnSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Open Settings"
-        android:textAllCaps="false" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -45,7 +21,23 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
+            tools:layout_editor_absoluteY="0dp">
+
+            <Button
+                android:id="@+id/btn_map"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="136dp"
+                android:layout_height="48dp"
+                android:background="@color/design_default_color_primary"
+                android:elevation="2dp"
+                android:text="Back to Map"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                android:translationX="140dp"
+                android:translationY="600dp"
+                app:layout_constraintWidth_percent="0.7" />
+        </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
