--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ViewProfileActivity">
@@ -10,149 +11,157 @@
         android:id="@+id/tv_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="View Profile Information"
-        android:textColor="#000"
-        android:textSize="26sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="26sp"
+        android:textColor="#000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="24dp"
+        />
 
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_heading">
+        app:layout_constraintTop_toBottomOf="@id/tv_heading"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:focusable="true"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            >
 
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_image"
                 android:layout_width="0dp"
+                app:layout_constraintWidth_percent="0.7"
                 android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"
                 android:textColorHint="#808080"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.7"></com.google.android.material.textfield.TextInputLayout>
+                >
+            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_first_name"
+                app:helperText="First Name"
                 android:layout_width="0dp"
+                app:layout_constraintWidth_percent="0.7"
                 android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="14dp"
                 android:textColorHint="#808080"
-                app:helperText="First Name"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layout_image"
-                app:layout_constraintWidth_percent="0.7">
+                >
 
                 <TextView
                     android:id="@+id/et_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#00000000"
-                    android:padding="10dp"
                     android:text="Cameron"
+                    android:gravity="center"
+                    android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
-                    android:textSize="15sp" />
+                    android:background="#00000000"
+                    android:textSize="15sp"
+                    />
             </com.google.android.material.textfield.TextInputLayout>
 
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_last_name"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textColorHint="#808080"
                 app:helperText="Last Name"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintWidth_percent="0.7"
+                android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textColorHint="#808080"
                 app:layout_constraintTop_toBottomOf="@+id/layout_first_name"
-                app:layout_constraintWidth_percent="0.7">
+                >
 
                 <TextView
                     android:id="@+id/et_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#00000000"
+                    android:gravity="center"
                     android:padding="10dp"
                     android:text="Fassett"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
-                    android:textSize="15sp" />
+                    android:background="#00000000"
+                    android:textSize="15sp"
+                    />
             </com.google.android.material.textfield.TextInputLayout>
 
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_email"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textColorHint="#808080"
                 app:helperText="Email Address"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintWidth_percent="0.7"
+                android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textColorHint="#808080"
                 app:layout_constraintTop_toBottomOf="@+id/layout_last_name"
-                app:layout_constraintWidth_percent="0.7">
+                >
 
                 <TextView
                     android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#00000000"
-                    android:inputType="textEmailAddress"
+                    android:gravity="center"
                     android:padding="10dp"
-                    android:text="camfass@gmail.com"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
-                    android:textSize="15sp" />
+                    android:background="#00000000"
+                    android:text="camfass@gmail.com"
+                    android:textSize="15sp"
+                    android:inputType="textEmailAddress"
+                    />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <Button
-                android:id="@+id/btn_edit"
-                style="?android:attr/borderlessButtonStyle"
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layout_contact_no"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="30dp"
-                android:background="@color/design_default_color_primary"
-                android:elevation="2dp"
-                android:onClick="performEditProfile"
-                android:text="Edit Profile"
-                android:textAllCaps="false"
-                android:textColor="#FFFFFF"
-                android:textSize="15sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:helperText="Contact No"
+                app:layout_constraintWidth_percent="0.7"
+                android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textColorHint="#808080"
                 app:layout_constraintTop_toBottomOf="@+id/layout_email"
-                app:layout_constraintWidth_percent="0.7" />
+                >
+
+                <TextView
+                    android:id="@+id/et_contact_no"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#808080"
+                    android:background="#00000000"
+                    android:text="03001234567"
+                    android:textSize="15sp"
+                    android:inputType="phone"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
-
-    <Button
-        android:id="@+id/btn_map"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="136dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="5dp"
-        android:background="@color/design_default_color_primary"
-        android:elevation="2dp"
-        android:text="Back to Map"
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
