--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,13 @@
     <color name="light_red">#BF0000</color>
     <color name="maroon">#800000</color>
     <color name="dark_red">#400000</color>
+    <color name="primary">#30877E</color>
+    <color name="primaryVariant">#09514A</color>
+    <color name="onPrimary">#FFFFFF</color>
+    <color name="secondary">#DEFFF2</color>
+    <color name="secondaryVariant">#efefef</color>
+    <color name="onSecondary">#131313</color>
+    <color name="accent">#0088CC</color>
+    <color name="maneuver_main_background">#30877E</color>
+    <color name="maneuver_sub_background">#09514A</color>
 </resources>
