--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:windowSoftInputMode="adjustPan"
     android:background="#FFFFFF"
     tools:context=".CreateProfileActivity">
 
@@ -97,7 +98,6 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-
             <Button
                 android:id="@+id/btn_create"
                 style="?android:attr/borderlessButtonStyle"
@@ -125,6 +125,8 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="90dp"
         android:layout_height="45dp"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="737dp"
         android:layout_marginEnd="160dp"
         android:layout_marginBottom="28dp"
         android:background="@color/design_default_color_primary"
@@ -133,8 +135,9 @@
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
