Fixed a bunch of dark mode bugs

--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="View Profile Information"
-        android:textColor="#000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
                     android:background="#00000000"
                     android:padding="10dp"
                     android:text="Cameron"
-                    android:textColor="#000000"
+                    android:textColor="?android:textColorPrimary"
                     android:textColorHint="#808080"
                     android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -86,7 +86,7 @@
                     android:background="#00000000"
                     android:padding="10dp"
                     android:text="Fassett"
-                    android:textColor="#000000"
+                    android:textColor="?android:textColorPrimary"
                     android:textColorHint="#808080"
                     android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -111,7 +111,7 @@
                     android:inputType="textEmailAddress"
                     android:padding="10dp"
                     android:text="camfass@gmail.com"
-                    android:textColor="#000000"
+                    android:textColor="?android:textColorPrimary"
                     android:textColorHint="#808080"
                     android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
