--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
     android:windowSoftInputMode="adjustPan"
     tools:context=".EditProfileActivity">
 
@@ -14,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Update Profile Information"
-        android:textColor="#000"
+        android:textColor="?android:textColorPrimary"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +66,7 @@
                     android:gravity="center"
                     android:hint="First Name"
                     android:padding="30dp"
-                    android:textColor="#000000"
+                    android:textColor="?android:textColorPrimary"
                     android:textColorHint="#808080"
                     android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -92,7 +91,7 @@
                     android:gravity="center"
                     android:hint="Last Name"
                     android:padding="10dp"
-                    android:textColor="#000000"
+                    android:textColor="?android:textColorPrimary"
                     android:textColorHint="#808080"
                     android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -118,7 +117,7 @@
                     android:hint="Email"
                     android:inputType="textEmailAddress"
                     android:padding="10dp"
-                    android:textColor="#000000"
+                    android:textColor="?android:textColorPrimary"
                     android:textColorHint="#808080"
                     android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
