--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:background="#FFFFFF"
         android:padding="25dp"
         android:orientation="vertical">
         <TextView
@@ -20,17 +19,19 @@
             android:padding="30dp"
             android:textAlignment="center"
             android:text="Welcome to
-                          Arbor Parker"/>
+                          Arbor Parker"
+            android:textColor="?android:textColorPrimary"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25dp"
             android:padding="30dp"
-            android:text="Login"/>
+            android:text="Login"
+            android:textColor="?android:textColorPrimary"/>
         <EditText
             android:id="@+id/et_user_name"
             android:hint="User Name"
-            android:textColor="#6bfff7"
+            android:textColor="?android:textColorPrimary"
             android:textColorHint="#808080"
             android:textAlignment="center"
             android:layout_width="match_parent"
@@ -38,7 +39,7 @@
         <EditText
             android:id="@+id/et_password"
             android:hint="Password"
-            android:textColor="#6bfff7"
+            android:textColor="?android:textColorPrimary"
             android:textColorHint="#808080"
             android:textAlignment="center"
             android:inputType="textPassword"
