--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -26,7 +26,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="24dp"
                 android:text="General"
-                android:textColor="#000"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
